# zeroinject-shield

./: .gitignore  Direct run.bat  README.md  docker-compose.yml  pyproject.toml  render.yaml  start.bat
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  requirements-dev.txt  requirements.txt
backend/dataset/: README.md  loader.py
backend/db/: crud.py  database.py
backend/models/: schemas.py
backend/pipeline/: chatbot.py  consensus.py  policy.py  sanitizer.py  verifier.py
backend/routers/: analyze.py  demo.py  logs.py  secure_chat.py  stats.py
backend/tests/: conftest.py  test_chatbot.py  test_consensus.py  test_policy.py  test_routers.py  test_sanitizer.py  test_verifier.py
datasets/: test-00000-of-00001.parquet
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend-business/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend-business/src/: App.jsx  index.css
frontend-business/src/components/: Chatbot.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Products.jsx
frontend-business/src/data/: businessData.js  products.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentVerdicts.jsx  Analyzer.jsx  Dashboard.jsx  DemoRunner.jsx  MiddlewareTest.jsx  ThreatLog.jsx  VerdictBadge.jsx
frontend/src/components/__tests__/: VerdictBadge.test.jsx
frontend/src/pages/: Home.jsx
