[project]
name = "zeroinject-shield"
version = "1.0.0"
description = "Multi-LLM prompt injection defence middleware"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",   # do not perform function calls in default arguments (FastAPI pattern)
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pipeline", "routers", "db", "models", "dataset"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
